--- a/index.html
+++ b/index.html
@@ -2,35 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale-1.0" />
     <meta name="author" content="AI" />
     <title>Tally Code Editor</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&family=Inter:wght@400;500;700&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
       rel="stylesheet"
     />
-  <link rel="stylesheet" href="/index.css">
-</head>
-  <body>
-    <div id="root"></div>
-    <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "auto-zustand-selectors-hook": "https://esm.sh/auto-zustand-selectors-hook",
-    "clsx": "https://esm.sh/clsx",
-    "immer": "https://esm.sh/immer",
-    "lodash.get": "https://esm.sh/lodash.get",
-    "react": "https://esm.sh/react",
-    "react-dom/client": "https://esm.sh/react-dom/client",
-    "zustand": "https://esm.sh/zustand",
-    "zustand/middleware/immer": "https://esm.sh/zustand/middleware/immer",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
     "react/": "https://esm.sh/react@^19.1.1/",
-    "zustand/": "https://esm.sh/zustand@^5.0.7/"
+    "react": "https://esm.sh/react@^19.1.1",
+    "zustand": "https://esm.sh/zustand@^5.0.7",
+    "zustand/": "https://esm.sh/zustand@^5.0.7/",
+    "auto-zustand-selectors-hook": "https://esm.sh/auto-zustand-selectors-hook@^3.0.1",
+    "lodash.get": "https://esm.sh/lodash.get@^4.4.2",
+    "clsx": "https://esm.sh/clsx@^2.1.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.0.0",
+    "vite": "https://esm.sh/vite@^7.1.2",
+    "lodash": "https://esm.sh/lodash@^4.17.21"
   }
 }
 </script>
-    <script type="module" src="index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
-</body>
+<link rel="stylesheet" href="/index.css">
+</head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
